After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758260 - souphttpclientsink: Fix error leak and handle error
souphttpclientsink: Fix error leak and handle error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-18 05:48 UTC by Vineeth
Modified: 2015-11-18 07:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix error leak and handle error (1.33 KB, patch)
2015-11-18 05:49 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-11-18 05:48:53 UTC
g_thread_try_new allows for possiblity of failures. In case it fails, error is not handled and leaked.
Comment 1 Vineeth 2015-11-18 05:49:52 UTC
Created attachment 315806 [details] [review]
fix error leak and handle error
Comment 2 Sebastian Dröge (slomo) 2015-11-18 07:32:28 UTC
commit bd701b8ee52b8dd72db6b36f3c8179ec998756b5
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Nov 18 14:48:36 2015 +0900

    souphttpclientsink: Fix error leak and handle error
    
    g_thread_try_new allows for possiblity of failures. In case it fails,
    error is not handled and leaked.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=758260